Collider, Box and Sphere Collider WIP

--- a/AGP Assessment Project.vcxproj.filters
+++ b/AGP Assessment Project.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClCompile Include="Source\Utilities\Debugging\DebugUtils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Utilities\MathUtils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
