--- a/AGP Assessment Project.vcxproj
+++ b/AGP Assessment Project.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="Source\Game\GameObjects\Default\Sphere.cpp" />
     <ClCompile Include="Source\UI\Core\UserInterfaceElement.cpp" />
     <ClCompile Include="Source\Utilities\Debugging\DebugUtils.cpp" />
+    <ClCompile Include="Source\Utilities\MathUtils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
