--- a/AGP Assessment Project.vcxproj
+++ b/AGP Assessment Project.vcxproj
@@ -131,6 +131,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Lighting\PointLight.cpp" />
+    <ClCompile Include="Source\Lighting\DirectionalLight.cpp" />
+    <ClCompile Include="Source\Lighting\AmbientLight.cpp" />
+    <ClCompile Include="Source\Lighting\Core\Light.cpp" />
     <ClCompile Include="Source\Components\Physics\BoxCollider.cpp" />
     <ClCompile Include="Source\Components\Physics\Collider.cpp" />
     <ClCompile Include="Source\Components\Physics\Rigidbody.cpp" />
@@ -167,6 +171,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Lighting\PointLight.h" />
+    <ClInclude Include="Source\Lighting\DirectionalLight.h" />
+    <ClInclude Include="Source\Lighting\AmbientLight.h" />
+    <ClInclude Include="Source\Lighting\Core\Light.h" />
     <ClInclude Include="Source\Assets\Collections\ConstantBufferData.h" />
     <ClInclude Include="Source\Assets\Collections\VertexShaderData.h" />
     <ClInclude Include="Source\Components\Physics\BoxCollider.h" />
