Bunch of Random Changes
Better safety for AssetHandler getters (Won't automatically create an empty entry if the asset the person is trying to get is not on the map.

Automatic aspect ratio update based on window resizing.

EMPTY static const for Vertex and Constant Data.

Re-named misleading skyboxTextureName to reflectedTextureName.

Made sure cameras roll is properly initialized so the world isn't upside down.

--- a/AGP Assessment Project.vcxproj
+++ b/AGP Assessment Project.vcxproj
@@ -131,6 +131,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Assets\Collections\ConstantBufferData.cpp" />
+    <ClCompile Include="Source\Assets\Collections\VertexShaderData.cpp" />
     <ClCompile Include="Source\Lighting\PointLight.cpp" />
     <ClCompile Include="Source\Lighting\DirectionalLight.cpp" />
     <ClCompile Include="Source\Lighting\AmbientLight.cpp" />
