--- a/AGP Assessment Project.vcxproj.filters
+++ b/AGP Assessment Project.vcxproj.filters
@@ -120,6 +120,12 @@
     <ClCompile Include="Source\Lighting\PointLight.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Assets\Collections\VertexShaderData.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Assets\Collections\ConstantBufferData.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
